Creating the file input for the subtitles, and styling the word's amount's appearance

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "most-used-words",
+  "title": "Most Used Words",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,7 +24,6 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "electron": "^7.0.0",
-    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.19.0",
